--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,9 +1,10 @@
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
-<div>
+<body>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
     <div class="container-fluid">
       <h2 style="padding-right: 5%;">Dealerships</h2>
@@ -25,46 +26,60 @@
       </div>
     </div>
   </nav>
-  
-    <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
+
+  <!-- Container to ensure full width -->
+  <div class="container" style="margin-top: 5%;">
+    <div class="card" style="width: 100%; margin: auto;">
       <div class="banner" name="about-header">
         <h1>About Us</h1>
-        Welcome to Best Cars Dealership, where we provide a wide range of top-quality vehicles to suit every need. Whether you're looking for a reliable domestic car or an imported luxury model, we offer competitive prices and exceptional customer service to ensure a smooth buying experience.
-      </div>
-      <div style="display: flex;flex-direction: row; margin:auto">
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person1.jpg" alt="Card image">
-        <div class="card-body">
-            <p class="title">Cameron Hayes</p>
-            <p>Sales Manager</p>
-            <p class="card-text">Cameron has over 10 years of experience in the automotive industry, helping clients find their perfect car.</p>
-            <p>chayes@dealership.com</p>
-        </div>
+        <p>Welcome to Best Cars Dealership, where we provide a wide range of top-quality vehicles to suit every need. Whether you're looking for a reliable domestic car or an imported luxury model, we offer competitive prices and exceptional customer service to ensure a smooth buying experience.</p>
       </div>
 
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person2.jpg" alt="Card image">
-        <div class="card-body">
-            <p class="title">Avery Johnson</p>
-            <p>Customer Relations Specialist</p>
-            <p class="card-text">Avery is dedicated to ensuring customers have an exceptional experience, addressing their needs with expertise and care.</p>
-            <p>ajohnson@dealership.com</p>
+      <!-- Flexbox layout for images side by side -->
+      <div class="row" style="display: flex; justify-content: space-between; margin-top: 20px;">
+        
+        <!-- Card 1 -->
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="/static/person1.jpg" alt="Card image">
+            <div class="card-body">
+              <p class="title">Cameron Hayes</p>
+              <p>Sales Manager</p>
+              <p class="card-text">Cameron has over 10 years of experience in the automotive industry, helping clients find their perfect car.</p>
+              <p>chayes@dealership.com</p>
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person3.jpg" alt="Card image">
-        <div class="card-body">
-            <p class="title">Maya Ellse</p>
-            <p>Marketing Director</p>
-            <p class="card-text">Maya leads marketing strategies, driving brand awareness and customer engagement through innovative campaigns.</p>
-            <p>mayaellse@dealership.com</p>
+        <!-- Card 2 -->
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="/static/person2.jpg" alt="Card image">
+            <div class="card-body">
+              <p class="title">Avery Johnson</p>
+              <p>Customer Relations Specialist</p>
+              <p class="card-text">Avery is dedicated to ensuring customers have an exceptional experience, addressing their needs with expertise and care.</p>
+              <p>ajohnson@dealership.com</p>
+            </div>
+          </div>
         </div>
+
+        <!-- Card 3 -->
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="/static/person3.jpg" alt="Card image">
+            <div class="card-body">
+              <p class="title">Maya Ellse</p>
+              <p>Marketing Director</p>
+              <p class="card-text">Maya leads marketing strategies, driving brand awareness and customer engagement through innovative campaigns.</p>
+              <p>mayaellse@dealership.com</p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
-    </div>
-    </div>
-    
-</div>
+  </div>
 
+</body>
 </html>
