--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/static/style.css">
@@ -31,20 +32,22 @@
   <div class="container" style="padding-top: 20px; padding-bottom: 40px; display: flex; flex-direction: column; align-items: center; padding: 20px;">
     <h1 style="text-align: center; margin-bottom: 20px;">Contact Us</h1>
     <p style="text-align: center; margin-bottom: 20px;">If you have any questions or inquiries, feel free to reach out to us. We are happy to assist you!</p>
-    
-    <!-- Contact Info and Image in Column with Reduced Padding -->
-    <div class="d-flex flex-column align-items-center" style="gap: 20px; padding: 20px; width: 80%; background-color: #f8f9fa; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
 
-      <!-- Contact Info Card with no background -->
+    <div class="d-flex flex-column align-items-center" style="gap: 20px; padding: 20px; width: 80%; background-color: #f8f9fa; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+      
       <div class="card" style="width: 100%; padding: 20px; border: none;">
         <div class="card-body">
           <p><strong>Email:</strong> contact@dealership.com</p>
           <p><strong>Phone:</strong> +1 (800) 123-4567</p>
+          <p><strong>Alternate Phone:</strong> +1 (800) 765-4321</p>
+          <p><strong>Fax:</strong> +1 (800) 456-7890</p>
           <p><strong>Address:</strong> 123 Car Dealership St, City, State, 12345</p>
+          <p><strong>Support Hours:</strong> Monday - Friday, 9:00 AM - 6:00 PM</p>
+          <p><strong>Customer Service:</strong> +1 (800) 555-6789</p>
+          <p><strong>WhatsApp:</strong> +1 (800) 999-8888</p>
         </div>
       </div>
 
-      <!-- Image Card with increased size and no background -->
       <div class="card" style="width: 100%; padding: 0; border: none;">
         <img class="card-img-top" src="/static/cars.jpeg" alt="Contact Us" style="width: 100%; height: 600px; object-fit: cover; border-radius: 8px;">
       </div>
